mirror_lang/src/MirrorLang.g4
grammar MirrorLang;

WS: [ \t\r\n]+ -> skip;

VARIABLE: '$' [a-z][a-z0-9_]*;

ARITHMETIC_OPERATOR: '+' | '-' | '*' | '/' | '^' | '%';
COMPARE_OPERATOR: '==' | '>=' | '>' | '<=' | '<' | '!=';

INT_VALUE: [0-9]+;
STRING_VALUE: '"' .*? '"';

SET_START: '(SET';
SET_END: 'TES)';
LOOPIF_START: '(LOOPIF';
LOOPIF_END: 'FIPOOL)';
IF_START: '(IF';
IF_END: 'FI)';
LOG_START: '(LOG';
LOG_END: 'GOL)';
IGNORE_START: '(IGNORE';
IGNORE_END: 'ERONGI)';

SINGLE_LINE_COMMENT: '//' .*? '\r'? '\n' -> skip;

EQUALS: '=';

NEWLINE: '\r'? '\n';

program: statement+ EOF;

statement: setStatement NEWLINE
         | loopIfStatement NEWLINE
         | ifStatement NEWLINE
         | logStatement NEWLINE
         | ignoreStatement NEWLINE
         ;

setStatement: SET_START WS? VARIABLE WS? EQUALS WS? expression WS? SET_END;

loopIfStatement: LOOPIF_START WS? condition WS? NEWLINE program LOOPIF_END;

ifStatement: IF_START WS? condition WS? NEWLINE program IF_END;

logStatement: LOG_START WS? (expression | STRING_VALUE) WS? LOG_END;

ignoreStatement: IGNORE_START WS? program WS? IGNORE_END;

condition: expression WS? COMPARE_OPERATOR WS? expression;

expression: term (ARITHMETIC_OPERATOR term)*;

term: VARIABLE | INT_VALUE | '(' expression ')';
